--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="icon" type="image/svg+xml" href="src/favicon.svg" />
 
-    <title>Phil's VidChat</title>
+    <title>PhilthChat</title>
 	
 	<style>body{margin:0;}</style>
   </head>
